gcc/testsuite/gcc.dg/spellcheck-options-1.c
/* { dg-do compile } */
/* { dg-options "-Wcoercion" } */
/* { dg-error "unrecognized command-line option '-Wcoercion'; did you mean '-Wconversion'?"  "" { target *-*-* } 0 } */

